Commiting Small case of urls

--- a/MiraiConsultMVC/Views/Home/HowWeWorks.cshtml
+++ b/MiraiConsultMVC/Views/Home/HowWeWorks.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "HowWeWorks";
+    ViewBag.Title = "howweworks";
     Layout = "~/Views/Shared/_AskmiraiMasterLayout.cshtml";
 }
 
