--- a/MiraiConsultMVC/Views/User/ForgotPassword.cshtml
+++ b/MiraiConsultMVC/Views/User/ForgotPassword.cshtml
@@ -29,7 +29,7 @@
                     }
                 </div>
             </div>
-            @using (Html.BeginForm("ForgotPassword", "User", new { autocomplete = "off" }))
+            @using (Html.BeginForm("forgotpassword", "User", new { autocomplete = "off" }))
             {
                 @Html.AntiForgeryToken()
                 @Html.ValidationSummary(true)
