Change link as small case

--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -55,7 +55,7 @@
                                         {
                                             <div class="pull-right">
                                                 <ul class="nav">
-                                                    <li><a href="@Url.Action("Login", "User")">Already have an account? <b><u>Login</u></b></a></li>
+                                                    <li><a href="@Url.Action("login", "User")">Already have an account? <b><u>Login</u></b></a></li>
                                                 </ul>
                                             </div>
                                         }
