--- a/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
@@ -230,7 +230,7 @@
             $('#liFeed').addClass("active"); liDocFeed
             $('#liDocFeed').addClass("active");
         }
-        else if (refUrl.indexOf("similarQuestions") >= 0) {
+        else if (refUrl.indexOf("similar-Questions") >= 0) {
             $(".navigation li.active").removeClass("active");
             $('#liSimilarQuestions').addClass("active");
         }
