--- a/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
+++ b/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
@@ -149,7 +149,7 @@
                 var charCode = (evt.which) ? evt.which : event.keyCode
                 if (charCode == 13) {
                     var session = '@Session["UserType"]';
-                        window.location.href = "/similarQuestions/" + x.value;
+                        window.location.href = "/similar-Questions/" + x.value;
                     return false;
                 }
                 return true;
