--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Mirai Consult™</title>
+    <title>Mirai Consult ™</title>
     <link rel="stylesheet" href="../Content/bootstrap.min.css" />
     <link href="../Content/navigation.css" rel="stylesheet" />
     <link rel="stylesheet" href="../Scripts/google-code-prettify/prettify.css" />
@@ -57,13 +57,13 @@
                                         <ul class="dropdown-menu pull-right">
                                             @if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient))
                                             {
-                                                <li><a href="../patientprofile"><i class="icon-user"></i>My Profile</a></li>
-                                                <li><a href="/changepassword"><i class="icon-key"></i>Change Password</a></li>
+                                                <li><a href="../patient-profile"><i class="icon-user"></i>My Profile</a></li>
+                                                <li><a href="/change-password"><i class="icon-key"></i>Change Password</a></li>
                                             }
                                             else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Doctor))
                                             {
                                                 <li><a href="@Url.Action("DoctorProfile","Doctors")"><i class="icon-user"></i>My Profile</a></li>
-                                                <li><a href="/changepassword"><i class="icon-key"></i>Change Password</a></li>
+                                                <li><a href="/change-password"><i class="icon-key"></i>Change Password</a></li>
                                             }
                                             <li>
                                                 <a id="linkLogout" onclick="return confirm('Are you sure you want to logout?');" href="/User/logout"><i class="icon-off"></i>Logout</a>
@@ -117,7 +117,7 @@
                                                     </a>
                                                 </li>
                                                 <li id="liMyActivity" class="my-activity">
-                                                    <a href="/myactivity">
+                                                    <a href="/my-activity">
                                                         <span class="Icon Icon--my-activity Icon--large" id="MyActivitySpan" style="margin-top: 11px;"></span><span class="text"><br />My Activity</span>
                                                     </a>
                                                 </li>
@@ -200,7 +200,7 @@
                             {
                                 <ul class="nav pull-right reguser-menu-top-margin">
                                     <li class="ask-doctor">
-                                        <a href="/askdoctor" class="menu-padding reg-menu-padding">
+                                        <a href="/ask-doctor" class="menu-padding reg-menu-padding">
                                             <span class="Icon Icon--ask-doctor Icon--large"></span> <span class="text font-bold menutext-margin-top">Ask Doctors</span>
                                         </a>
                                     </li>
@@ -208,7 +208,7 @@
                                 <ul class="nav pull-right">
                                     <li class="my-activity">
 
-                                        <a href="/myactivity" class="menu-padding  reg-menu-padding">
+                                        <a href="/my-activity" class="menu-padding  reg-menu-padding">
 
                                             <span class="Icon Icon--my-activity Icon--large"></span> <span class="text font-bold menutext-margin-top">My Activity</span>
                                         </a>
@@ -223,7 +223,7 @@
                                 </ul>
                                 <ul class="nav pull-right">
                                     <li class="find-doctors">
-                                        <a href="/Home/finddoctors" class="menu-padding  reg-menu-padding">
+                                        <a href="/Home/find-doctors" class="menu-padding  reg-menu-padding">
                                             <span class="Icon Icon--find-doctor Icon--large"></span> <span class="text font-bold menutext-margin-top"> Find a Doctor</span>
                                         </a>
                                     </li>
