Commiting updated routes

--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -176,7 +176,7 @@
                                                 {
                                                 @*<%--
                                                 <li><a href="../../app/admin/ManageSiteContent.aspx"><i class="icon-edit"></i>Manage Site Content</a></li>--%>*@
-                                                <li><a href="/User/Manage-doctors"><i class="icon-edit"></i>My Account</a></li>
+                                                <li><a href="/User/Managedoctors"><i class="icon-edit"></i>My Account</a></li>
                                                 }
                                                 <li>
                                                     <a id="linkLogout" onclick="return confirm('Are you sure you want to logout?');" href="/User/Logout"><i class="icon-off"></i>Logout</a>
