--- a/MiraiConsultMVC/Views/admin/assignquestion.cshtml
+++ b/MiraiConsultMVC/Views/admin/assignquestion.cshtml
@@ -153,7 +153,7 @@
                                         }
                                         else
                                         {
-                                            ViewBag.hdndoctorIds = ViewBag.Value + "," + Convert.ToString(Model.ToList()[i].userid);
+                                            ViewBag.hdndoctorIds = ViewBag.hdndoctorIds + "," + Convert.ToString(Model.ToList()[i].userid);
                                         }
                                         <tr>
                                             <td>
